# ddd-example

./: Cargo.toml  docker-compose.yaml
src/: api.rs  domain.rs  main.rs  repository.rs  service.rs
